--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-matplotlib==3.0.3
-numpy==1.16.4
-pandas==0.24.2
-networkx==2.2
-scikit_learn==0.21.3
+sympy==1.4
+matplotlib==3.1.1
+seaborn==0.9.0
+joblib==0.13.2
+palettable==3.3.0
+networkx==2.3
+numpy==1.17.2
+scipy==1.3.1
+pandas==0.25.1
+scikit_learn==0.22
