--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-sympy==1.4
-matplotlib==3.1.1
+statsmodels==0.10.1
 seaborn==0.9.0
-joblib==0.13.2
-palettable==3.3.0
-networkx==2.3
-numpy==1.17.2
+palettable==3.1.1
 scipy==1.3.1
-pandas==0.25.1
+numpy==1.16.4
+matplotlib==3.0.3
+pandas==0.24.2
+patsy==0.5.1
+networkx==2.2
+sympy==1.4
+joblib==0.11
 scikit_learn==0.22
