--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-statsmodels==0.10.1
-seaborn==0.9.0
 palettable==3.1.1
-scipy==1.3.1
-numpy==1.16.4
+powerlaw==1.4.6
+patsy==0.5.1
 matplotlib==3.0.3
 pandas==0.24.2
-patsy==0.5.1
+numpy==1.16.4
+statsmodels==0.10.1
 networkx==2.2
 sympy==1.4
+seaborn==0.9.0
 joblib==0.11
-scikit_learn==0.22
+scipy==1.3.1
+scikit_learn==0.22.2.post1
