--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 palettable==3.1.1
-powerlaw==1.4.6
+joblib==0.11
 patsy==0.5.1
-matplotlib==3.0.3
-pandas==0.24.2
-numpy==1.16.4
+powerlaw==1.4.6
 statsmodels==0.10.1
+pandas==0.24.2
+seaborn==0.9.1
+scipy==1.1.0
+numpy==1.16.4
+matplotlib==3.0.3
 networkx==2.2
 sympy==1.4
-seaborn==0.9.0
-joblib==0.11
-scipy==1.3.1
-scikit_learn==0.22.2.post1
+palettable==3.1.1
+scikit_learn==0.24.2
